# async-python-sprint-2

./: .pre-commit-config.yaml  README.md  errors.py  job.py  main.py  pyproject.toml  scheduler.py  settings.py
tasks/: errors.py  files.py  net.py
tests/: conftest.py  test_scheduler.py
tests/test_tasks/: test_files.py  test_net.py
