[tool.poetry]
name = "async-python-sprint-2"
version = "0.1.0"
description = ""
authors = ["Александр Видяков  <alex.vidyakov@yandex.ru>"]
readme = "README.md"
packages = [{include = "async_python_sprint_2"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
loguru = "^0.6.0"
pydantic = "^1.10.2"
backoff = "^2.2.1"
pytest-freezegun = "^0.4.2"
Faker = "^15.1.1"
mimesis = "^6.1.1"
furl = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
