[tool.poetry]
name = "async-python-sprint-2"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.1.3"
loguru = "^0.6.0"
pydantic = "^1.10.2"
backoff = "^2.2.1"
pytest-freezegun = "^0.4.2"
mimesis = "^6.1.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
